--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -25,7 +25,7 @@ const serverImages = [
     </a>
     <hr class="border-zinc-700 border-2 rounded-xl w-7"/>
     {serverImages.map(img => (
-        <a href={`${img.id}`} class="my-2 mx-2 hover:scale-105 transition-transform">
+        <a href={`/servers/${img.id}`} class="my-2 mx-2 hover:scale-105 transition-transform">
             <img src={img.img} alt="Imagen server" class="rounded-full hover:rounded-2xl"/>
         </a>
     ))}
