--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -23,7 +23,7 @@
     </nav>
     <hr class="border-zinc-800"/>
     <div class="grid grid-cols-[1196px_1fr] grid-rows-[160px_1fr]">
-        <div class="flex flex-col gap-3 py-5 px-5 border-solid border-[1px] border-[#4e5b63] border-t-0 border-l-0 h-[155px]">
+        <div class="flex flex-col gap-3 py-5 px-5 border-solid border-[1px] border-[#4e5b63] border-r-0 border-t-0 border-l-0 h-[155px]">
             <h1 class="font-bold text-white">AÑADIR AMIGO</h1>
             <p class="text-sm text-zinc-400">Puedes añadir amigos con su nombre de usuario de Discord.</p>
             <div class="flex flex-row justify-between gap-9 bg-zinc-800 rounded-lg mb-5">
